--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -40,7 +40,8 @@
     &__title {
         padding: 40px 0 0 20px;
         font-family: $font-secondary;
-        font-size: 28px;
+        font-size: 25px;
+        font-weight: 500;
     }
     &__icon {
         position: absolute;
@@ -52,17 +53,24 @@
         text-transform: uppercase;
         font-weight: 300;
         padding-left: 20px;
-        font-size: 20px;
+        font-size: 15px;
         position: relative;
         &::after {
             content: "";
             height: 3px;
-            width: 50px;
+            width: 40px;
             position: absolute;
             bottom: -6px;
             margin-left: 20px;
             left: 0;
             background-color: $colour-tertiary;
+        }
+        @include tablette-only {
+            font-size: 20px;
+            &::after {
+                content: "";
+                width: 50px;
+            }
         }
     }
     @include desktop-only {
