--- a/sass/Layout/_card.scss
+++ b/sass/Layout/_card.scss
@@ -34,10 +34,13 @@
         font-weight: 900;
         font-size: 18px;
         padding-bottom: 5px;
+        @include tablette-only {
+            padding-bottom: 12px;
+        }
     }
     &__subtitle {
         font-weight: 400;
-        font-size: 14px;
+        font-size: 17px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -48,10 +51,10 @@
     }
     &__menu {
         position: relative;
-        padding: 2%;
+        padding: 3%;
         margin: 4% 4%;
         background-color: white;
-        border-radius: 20px 20px;
+        border-radius: 10px;
         box-shadow: 0px 1px 10px rgb(224, 224, 224);
         overflow: hidden;
         &:hover > .card__check {
@@ -63,13 +66,25 @@
         &:hover .card__price {
             transform: translate(-70px, 0);
         }
+        & .card__title {
+            font-size: 16px;
+            @include tablette-only {
+                font-size: 19px;
+            }
+        }
+        & .card__subtitle {
+            font-size: 14px;
+            @include tablette-only {
+                font-size: 17px;
+            }
+        }
     }
     &__price {
         font-weight: bold;
         transition: transform 500ms ease-in-out;
         text-align: right;
         position: absolute;
-        right: 25px;
+        right: 10px;
     }
     &__check {
         position: absolute;
