--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -1,11 +1,14 @@
 .page-footer {
     background-color: rgba(0, 0, 0, 0.774);
-    padding: 20px 10px;
+    padding: 20px 20px;
     &__img{
         color: white;
         font-family: $font-secondary;
         padding: 10px 0;
         font-weight: 500;
+        @include desktop-only {
+            padding-left: 2.5%;
+        }
     }
     &__home {
         animation : $delay-loader ease-in-out 0s loader forwards;
@@ -14,6 +17,9 @@
 
 .footer-list {
     list-style-type: none;
+    @include desktop-only {
+        padding-left: 2.5%;
+    }
     &__item {
         padding: 5px 0px;
         color: white;
