--- a/sass/main.css
+++ b/sass/main.css
@@ -427,9 +427,15 @@ a {
   padding-bottom: 5px;
 }
 
+@media screen and (min-width: 768px) {
+  .card__title {
+    padding-bottom: 12px;
+  }
+}
+
 .card__subtitle {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 17px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -443,10 +449,10 @@ a {
 
 .card__menu {
   position: relative;
-  padding: 2%;
+  padding: 3%;
   margin: 4% 4%;
   background-color: white;
-  border-radius: 20px 20px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 1px 10px #e0e0e0;
           box-shadow: 0px 1px 10px #e0e0e0;
   overflow: hidden;
@@ -467,6 +473,26 @@ a {
           transform: translate(-70px, 0);
 }
 
+.card__menu .card__title {
+  font-size: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .card__menu .card__title {
+    font-size: 19px;
+  }
+}
+
+.card__menu .card__subtitle {
+  font-size: 14px;
+}
+
+@media screen and (min-width: 768px) {
+  .card__menu .card__subtitle {
+    font-size: 17px;
+  }
+}
+
 .card__price {
   font-weight: bold;
   -webkit-transition: -webkit-transform 500ms ease-in-out;
@@ -475,7 +501,7 @@ a {
   transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
   text-align: right;
   position: absolute;
-  right: 25px;
+  right: 10px;
 }
 
 .card__check {
@@ -616,7 +642,7 @@ a {
 
 .page-footer {
   background-color: rgba(0, 0, 0, 0.774);
-  padding: 20px 10px;
+  padding: 20px 20px;
 }
 
 .page-footer__img {
@@ -626,6 +652,12 @@ a {
   font-weight: 500;
 }
 
+@media screen and (min-width: 992px) {
+  .page-footer__img {
+    padding-left: 2.5%;
+  }
+}
+
 .page-footer__home {
   -webkit-animation: 1000ms ease-in-out 0s loader forwards;
           animation: 1000ms ease-in-out 0s loader forwards;
@@ -633,6 +665,12 @@ a {
 
 .footer-list {
   list-style-type: none;
+}
+
+@media screen and (min-width: 992px) {
+  .footer-list {
+    padding-left: 2.5%;
+  }
 }
 
 .footer-list__item {
@@ -697,11 +735,17 @@ a {
 }
 
 .steps-home {
-  padding: 40px 15px;
+  padding: 40px 20px;
 }
 
 .steps-home__title {
   padding-bottom: 20px;
+}
+
+@media screen and (min-width: 992px) {
+  .steps-home__title {
+    padding-left: 2.5%;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -715,13 +759,25 @@ a {
   }
 }
 
+@media screen and (min-width: 992px) {
+  .steps-home .buttons-home {
+    padding-left: 2.5%;
+  }
+}
+
 .restaurants-home {
-  padding: 40px 15px;
+  padding: 40px 20px;
   background-color: whitesmoke;
 }
 
 .restaurants-home__title {
   padding-bottom: 15px;
+}
+
+@media screen and (min-width: 992px) {
+  .restaurants-home__title {
+    padding-left: 2.5%;
+  }
 }
 
 .card-list {
@@ -849,7 +905,8 @@ a {
 .menu__title {
   padding: 40px 0 0 20px;
   font-family: "Shrikhand", cursive;
-  font-size: 28px;
+  font-size: 25px;
+  font-weight: 500;
 }
 
 .menu__icon {
@@ -863,19 +920,29 @@ a {
   text-transform: uppercase;
   font-weight: 300;
   padding-left: 20px;
-  font-size: 20px;
+  font-size: 15px;
   position: relative;
 }
 
 .menu__steptitle::after {
   content: "";
   height: 3px;
-  width: 50px;
+  width: 40px;
   position: absolute;
   bottom: -6px;
   margin-left: 20px;
   left: 0;
   background-color: #99E2D0;
+}
+
+@media screen and (min-width: 768px) {
+  .menu__steptitle {
+    font-size: 20px;
+  }
+  .menu__steptitle::after {
+    content: "";
+    width: 50px;
+  }
 }
 
 @media screen and (min-width: 992px) {
