--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -4,6 +4,7 @@
     padding: 20px 0px 12px 0px;
     box-shadow: 0 2px 4px grey;
     position: relative;
+    z-index: 2;
     &__img {
         width: 45%;
     }
