--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -23,6 +23,9 @@
     &__item {
         padding: 5px 0px;
         color: white;
+        & a {
+            color: white; 
+        }
     }
     &__icon1 {
         padding-right: 12px;
