--- a/sass/main.css
+++ b/sass/main.css
@@ -221,6 +221,17 @@ a {
   font-weight: 500;
   cursor: pointer;
   margin: 5px;
+  -webkit-transition: ease-in-out, -webkit-filter 500ms, -webkit-box-shadow 500ms;
+  transition: ease-in-out, -webkit-filter 500ms, -webkit-box-shadow 500ms;
+  transition: filter 500ms, box-shadow 500ms, ease-in-out;
+  transition: filter 500ms, box-shadow 500ms, ease-in-out, -webkit-filter 500ms, -webkit-box-shadow 500ms;
+}
+
+.button-component:hover {
+  -webkit-filter: brightness(1.2);
+          filter: brightness(1.2);
+  -webkit-box-shadow: 5px 2px 2px #a7a7a7;
+          box-shadow: 5px 2px 2px #a7a7a7;
 }
 
 .button-menu {
@@ -595,6 +606,7 @@ a {
   -webkit-box-shadow: 0 2px 4px grey;
           box-shadow: 0 2px 4px grey;
   position: relative;
+  z-index: 2;
 }
 
 .header__img {
@@ -678,6 +690,10 @@ a {
 
 .footer-list__item {
   padding: 5px 0px;
+  color: white;
+}
+
+.footer-list__item a {
   color: white;
 }
 
